added snackbar and some foramtting

--- a/src/app/shared/appointment-modal/appointment-modal.component.html
+++ b/src/app/shared/appointment-modal/appointment-modal.component.html
@@ -80,7 +80,7 @@
             *ngIf="
             control.ageFormControl.hasError('pattern')||hasNumberError
             "
-            >Only numeric value input is accepted(greater than 0)</mat-error
+            >Only numeric value is accepted( must be greater than 0)</mat-error
           >
         </mat-form-field>
       </div>
