--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+.snackBar{
+  background-color: #3f51b5;
+  color: white;
+}
